--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BSUC 2025 Draft Lottery</title>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --navy: #162636;
       --gold: #C79A5B;
       --white: #f5f1eb;
       --burgundy: #A22D2E;
-      --light: #F5F1EB;
+      --red: #C03A3B;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
       background-color: var(--navy);
+      font-family: 'Roboto', sans-serif;
       color: var(--white);
+      margin: 0;
+      padding: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -26,84 +31,62 @@
     }
 
     header {
-      width: 100%;
       background: linear-gradient(90deg, var(--burgundy), var(--gold));
+      width: 100%;
       padding: 20px;
       text-align: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
     }
 
     header h1 {
-      margin: 0;
       font-family: 'Anton', sans-serif;
       font-size: 2.8rem;
-      color: var(--light);
+      color: var(--white);
+      letter-spacing: 2px;
+      margin: 0;
     }
 
     .subheader {
-      margin: 10px auto 30px;
-      font-size: 1.1rem;
+      margin: 15px auto 30px;
+      font-size: 1.2rem;
       font-style: italic;
       color: #aaa;
       text-align: center;
     }
 
-    .timer-and-clock {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 20px;
-    }
-
     .on-the-clock {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       color: var(--gold);
       text-transform: uppercase;
       font-weight: bold;
+      margin-top: 20px;
     }
 
-    .clock-name {
+    #clockName {
+      background: linear-gradient(145deg, var(--gold), var(--white));
+      color: var(--navy);
       font-size: 2rem;
       font-weight: bold;
-      color: var(--gold);
-      margin-bottom: 10px;
-    }
-
-    #timerDisplay {
-      font-size: 2.5rem;
-      font-weight: bold;
-      margin: 10px 0;
-    }
-
-    .flashing {
-      animation: flash 1s infinite;
-    }
-
-    @keyframes flash {
-      0%, 100% { color: red; }
-      50% { color: white; }
-    }
-
-    .timer-buttons {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
+      padding: 10px 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+      margin-bottom: 30px;
     }
 
     .dropdown-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
-      margin-bottom: 20px;
+      gap: 12px;
+      margin-bottom: 25px;
     }
 
     select, button {
       font-size: 1rem;
-      padding: 10px 15px;
-      border-radius: 6px;
+      padding: 12px;
+      border-radius: 8px;
       border: none;
       font-weight: bold;
-      cursor: pointer;
     }
 
     select {
@@ -112,12 +95,14 @@
     }
 
     button {
-      background-color: var(--light);
+      background-color: var(--gold);
       color: var(--navy);
+      cursor: pointer;
+      transition: all 0.3s ease;
     }
 
     button:hover {
-      background-color: #e5e2da;
+      background-color: #b48a4f;
     }
 
     .spots {
@@ -125,35 +110,34 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 12px;
-      max-width: 95%;
-      margin: 20px auto;
+      max-width: 800px;
+      margin-bottom: 30px;
     }
 
     .spot {
+      background: rgba(245, 241, 235, 0.95);
+      color: var(--navy);
+      font-size: 1.2rem;
+      font-weight: bold;
       width: 60px;
       height: 60px;
-      background-color: rgba(245, 241, 235, 0.95);
-      color: var(--navy);
-      font-weight: bold;
-      font-size: 1.2rem;
-      border: 2px solid var(--gold);
-      border-radius: 12px;
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       cursor: pointer;
-      transition: transform 0.2s;
-    }
-
-    .spot:hover {
-      transform: scale(1.08);
     }
 
     .spot.taken {
       background-color: var(--gold);
       color: var(--navy);
-      pointer-events: none;
+      cursor: default;
+    }
+
+    .spot:hover:not(.taken) {
+      transform: scale(1.1);
+      background: #ddd;
     }
 
     .draft-order {
@@ -161,35 +145,43 @@
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 12px;
       max-width: 800px;
-      margin: 40px auto;
       padding: 0 20px;
     }
 
     .draft-pick {
-      background-color: var(--light);
+      background-color: var(--white);
       color: var(--navy);
       padding: 16px;
       font-size: 1.2rem;
       font-weight: bold;
       border-radius: 8px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
       text-align: center;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
     }
 
-    @media (max-width: 600px) {
-      .spot {
-        width: 40px;
-        height: 40px;
-        font-size: 1rem;
-      }
+    #timerSection {
+      margin: 40px 0;
+      text-align: center;
+    }
 
-      .clock-name {
-        font-size: 1.5rem;
-      }
+    #timerDisplay {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      padding: 10px 30px;
+      background: #C03A3B;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 20px 5px red;
+      margin-bottom: 15px;
+    }
 
-      .draft-pick {
-        font-size: 1rem;
-      }
+    .flashing {
+      animation: flash 1s infinite;
+    }
+
+    @keyframes flash {
+      0%, 100% { box-shadow: 0 0 20px 5px red; }
+      50% { box-shadow: 0 0 10px 3px yellow; }
     }
   </style>
 </head>
@@ -198,20 +190,10 @@
     <h1>BSUC 2025 Draft Lottery</h1>
   </header>
   <div class="subheader">Football is legacy. Crooning is life.</div>
-
-  <div class="timer-and-clock">
-    <div class="on-the-clock">ON THE CLOCK</div>
-    <div class="clock-name" id="clockName">Select a manager below</div>
-    <div id="timerDisplay">10:00</div>
-    <div class="timer-buttons">
-      <button onclick="startTimer()">Start</button>
-      <button onclick="stopTimer()">Stop</button>
-      <button onclick="resetTimer()">Reset</button>
-    </div>
-  </div>
-
+  <div class="on-the-clock">ON THE CLOCK</div>
+  <div id="clockName">Select a manager below</div>
   <div class="dropdown-container">
-    <select id="managerDropdown" onchange="setManager()">
+    <select id="managerDropdown" onchange="updateClockName()">
       <option disabled selected>Select manager</option>
       <option>Justin</option>
       <option>Ryan</option>
@@ -227,43 +209,115 @@
       <option>Seth</option>
     </select>
     <button onclick="resetBoard()">Reset</button>
-    <button onclick="removePick()">Remove Pick</button>
+    <button onclick="removePickPrompt()">Remove Pick</button>
     <button onclick="lockDraft()">Lock Picks</button>
   </div>
-
   <div class="spots" id="spotsContainer"></div>
   <div class="draft-order" id="draftOrder"></div>
-
-  <audio id="buzzer" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
-
+  <div id="timerSection">
+    <div id="timerDisplay">60</div>
+    <button onclick="startTimer()">Start</button>
+    <button onclick="stopTimer()">Stop</button>
+    <button onclick="resetTimer()">Reset</button>
+    <audio id="buzzer" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
+  </div>
   <script>
-    const clockName = document.getElementById("clockName");
-    const managerDropdown = document.getElementById("managerDropdown");
-    const draftOrder = document.getElementById("draftOrder");
-    const spotsContainer = document.getElementById("spotsContainer");
+    const managerOnClock = document.getElementById('clockName');
+    const draftOrder = document.getElementById('draftOrder');
+    const spotsContainer = document.getElementById('spotsContainer');
 
-    // TIMER
+    for (let i = 1; i <= 12; i++) {
+      const spot = document.createElement('div');
+      spot.classList.add('spot');
+      spot.textContent = i;
+      spot.addEventListener('click', () => selectSpot(spot));
+      spotsContainer.appendChild(spot);
+
+      const pick = document.createElement('div');
+      pick.classList.add('draft-pick');
+      pick.id = `pick-${i}`;
+      pick.textContent = `${i}. `;
+      draftOrder.appendChild(pick);
+    }
+
+    function updateClockName() {
+      const dropdown = document.getElementById('managerDropdown');
+      managerOnClock.textContent = dropdown.value;
+    }
+
+    function selectSpot(el) {
+      if (el.classList.contains('taken')) return;
+      const spot = el.textContent;
+      const managerName = managerOnClock.textContent;
+      if (managerName === 'Select a manager below') return;
+
+      const pickEl = document.getElementById(`pick-${spot}`);
+      if (pickEl) {
+        pickEl.textContent = `${spot}. ${managerName}`;
+        el.classList.add('taken');
+        el.removeEventListener('click', selectSpot);
+      }
+    }
+
+    function resetBoard() {
+      document.querySelectorAll('.spot').forEach(spot => {
+        spot.classList.remove('taken');
+        spot.addEventListener('click', () => selectSpot(spot));
+      });
+      for (let i = 1; i <= 12; i++) {
+        document.getElementById(`pick-${i}`).textContent = `${i}. `;
+      }
+      managerOnClock.textContent = 'Select a manager below';
+      document.getElementById('managerDropdown').selectedIndex = 0;
+    }
+
+    function removePickPrompt() {
+      const pickNum = prompt("Enter the draft spot number to clear (1-12):");
+      const spotNum = parseInt(pickNum);
+      if (!isNaN(spotNum) && spotNum >= 1 && spotNum <= 12) {
+        document.getElementById(`pick-${spotNum}`).textContent = `${spotNum}. `;
+        const spotEls = document.querySelectorAll('.spot');
+        spotEls.forEach(spot => {
+          if (spot.textContent === String(spotNum)) {
+            spot.classList.remove('taken');
+            spot.addEventListener('click', () => selectSpot(spot));
+          }
+        });
+      } else {
+        alert("Invalid input. Please enter a number from 1 to 12.");
+      }
+    }
+
+    function lockDraft() {
+      document.querySelectorAll('select, button').forEach(el => el.disabled = true);
+      document.querySelectorAll('.spot').forEach(spot => {
+        spot.style.pointerEvents = 'none';
+      });
+    }
+
     let timer;
-    let timeLeft = 600; // 10 minutes
-    const timerDisplay = document.getElementById("timerDisplay");
+    let timeLeft = 60;
+    const display = document.getElementById("timerDisplay");
     const buzzer = document.getElementById("buzzer");
 
-    function updateTimerDisplay() {
-      const minutes = Math.floor(timeLeft / 60);
-      const seconds = timeLeft % 60;
-      timerDisplay.textContent = `${minutes}:${seconds.toString().padStart(2, "0")}`;
-      timerDisplay.classList.toggle("flashing", timeLeft <= 10 && timeLeft > 0);
+    function updateDisplay() {
+      display.textContent = timeLeft;
+      if (timeLeft <= 10 && timeLeft > 0) {
+        display.classList.add("flashing");
+      } else {
+        display.classList.remove("flashing");
+      }
     }
 
     function startTimer() {
       clearInterval(timer);
       timer = setInterval(() => {
         timeLeft--;
-        updateTimerDisplay();
-        if (timeLeft <= 0) {
+        updateDisplay();
+        if (timeLeft === 0) {
           clearInterval(timer);
-          timerDisplay.classList.remove("flashing");
           buzzer.play();
+          display.classList.remove("flashing");
         }
       }, 1000);
     }
@@ -274,76 +328,9 @@
 
     function resetTimer() {
       clearInterval(timer);
-      timeLeft = 600;
-      updateTimerDisplay();
-    }
-
-    updateTimerDisplay();
-
-    // DRAFT PICKS
-    for (let i = 1; i <= 12; i++) {
-      const spot = document.createElement("div");
-      spot.classList.add("spot");
-      spot.textContent = i;
-      spot.onclick = () => assignPick(i, spot);
-      spotsContainer.appendChild(spot);
-
-      const pick = document.createElement("div");
-      pick.classList.add("draft-pick");
-      pick.id = `pick-${i}`;
-      pick.textContent = `${i}.`;
-      draftOrder.appendChild(pick);
-    }
-
-    function setManager() {
-      clockName.textContent = managerDropdown.value;
-    }
-
-    function assignPick(number, spotEl) {
-      const manager = clockName.textContent;
-      if (!manager || manager === "Select a manager below") return;
-
-      const pickEl = document.getElementById(`pick-${number}`);
-      if (pickEl.textContent.trim() !== `${number}.`) return;
-
-      pickEl.textContent = `${number}. ${manager}`;
-      spotEl.classList.add("taken");
-      spotEl.onclick = null;
-    }
-
-    function removePick() {
-      const pickNum = prompt("Enter pick number to clear (1-12):");
-      const num = parseInt(pickNum);
-      if (isNaN(num) || num < 1 || num > 12) return alert("Invalid number.");
-      const pickEl = document.getElementById(`pick-${num}`);
-      pickEl.textContent = `${num}.`;
-
-      const spot = [...document.querySelectorAll(".spot")].find(s => s.textContent == num);
-      if (spot) {
-        spot.classList.remove("taken");
-        spot.onclick = () => assignPick(num, spot);
-      }
-    }
-
-    function resetBoard() {
-      document.querySelectorAll(".draft-pick").forEach((pick, i) => {
-        pick.textContent = `${i + 1}.`;
-      });
-      document.querySelectorAll(".spot").forEach((spot, i) => {
-        spot.classList.remove("taken");
-        spot.onclick = () => assignPick(i + 1, spot);
-      });
-      managerDropdown.selectedIndex = 0;
-      clockName.textContent = "Select a manager below";
-      resetTimer();
-    }
-
-    function lockDraft() {
-      document.querySelectorAll("select, button").forEach(el => el.disabled = true);
-      document.querySelectorAll(".spot").forEach(spot => {
-        spot.style.pointerEvents = "none";
-      });
-      clearInterval(timer);
+      timeLeft = 60;
+      updateDisplay();
+      display.classList.remove("flashing");
     }
   </script>
 </body>
