--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
   <div class="dropdown-container">
     <select id="managerDropdown" onchange="updateClockName()">
       <option disabled selected>Select manager</option>
+      <option>Selection in Progress...</option>
       <option>Justin</option>
       <option>Ryan</option>
       <option>Jared</option>
