--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BSUC 2025 Draft Lottery</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -14,20 +14,17 @@
       --light: #F5F1EB;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
       padding: 0;
       font-family: 'Roboto', sans-serif;
       background-color: var(--navy);
-      color: var(--light);
+      color: var(--white);
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 100vh;
     }
 
     header {
@@ -41,58 +38,70 @@
     header h1 {
       font-family: 'Anton', sans-serif;
       font-size: 2.8rem;
-      color: var(--white);
-      margin: 0;
+      color: var(--light);
       letter-spacing: 2px;
+      margin: 0;
     }
 
     .subheader {
       margin: 10px auto 30px;
-      text-align: center;
-      font-size: 1.1rem;
-      color: #aaa;
       font-style: italic;
+      font-size: 1.1rem;
+      color: #ccc;
+      text-align: center;
     }
 
     .on-the-clock {
-      font-size: 3.0rem;
-      color: var(--gold);
       text-transform: uppercase;
       font-weight: bold;
-      margin-top: 30px;
-      text-align: center;
+      color: var(--gold);
+      font-size: 1.4rem;
+      margin-top: 20px;
     }
 
-    .clock-name {
+    .clock-row {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    #clockName {
       font-size: 2rem;
       font-weight: bold;
       color: var(--gold);
-      margin-bottom: 10px;
-      text-align: center;
+      margin: 10px 0;
+    }
+
+    .timer-buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .flashing {
+      animation: flash 1s infinite;
+    }
+
+    @keyframes flash {
+      0%, 100% { color: red; }
+      50% { color: white; }
     }
 
     #timerDisplay {
       font-size: 3rem;
       font-weight: bold;
-      margin-bottom: 20px;
-      text-align: center;
-      text-shadow: 0 0 15px red;
-    }
-
-    .dropdown-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin-bottom: 20px;
+      color: var(--gold);
+      text-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700;
     }
 
     select, button {
-      font-size: 1.1rem;
-      padding: 12px;
+      font-size: 1rem;
+      padding: 10px 16px;
       border-radius: 8px;
       border: none;
       font-weight: bold;
+      margin: 5px;
       cursor: pointer;
     }
 
@@ -102,8 +111,21 @@
     }
 
     button {
-      background-color: var(--gold);
+      background-color: var(--light);
       color: var(--navy);
+    }
+
+    button:hover {
+      background-color: #e5e2da;
+    }
+
+    .dropdown-container,
+    .board-controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 15px;
     }
 
     .spots {
@@ -111,23 +133,25 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 12px;
-      margin: 20px auto 40px;
+      max-width: 95%;
       padding: 0 20px;
+      margin-bottom: 30px;
     }
 
     .spot {
       width: 60px;
       height: 60px;
+      border-radius: 12px;
       background: rgba(245, 241, 235, 0.95);
       color: var(--navy);
       font-weight: bold;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: transform 0.2s, background 0.3s;
       cursor: pointer;
-      transition: transform 0.2s;
     }
 
     .spot:hover {
@@ -142,23 +166,23 @@
     }
 
     .draft-order {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 12px;
+      max-width: 800px;
+      padding: 0 20px;
+      margin-bottom: 40px;
     }
 
     .draft-pick {
       background-color: var(--light);
       color: var(--navy);
-      padding: 16px;
-      font-size: 1.2rem;
       font-weight: bold;
+      padding: 16px;
       border-radius: 8px;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
       text-align: center;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+      font-size: 1.2rem;
     }
   </style>
 </head>
@@ -167,14 +191,21 @@
     <h1>BSUC 2025 Draft Lottery</h1>
   </header>
   <div class="subheader">Football is legacy. Crooning is life.</div>
-  <div class="on-the-clock">ON THE CLOCK</div>
-  <div class="clock-name" id="clockName">Select a manager below</div>
-  <div id="timerDisplay">10:00</div>
+
+  <div class="clock-row">
+    <div class="on-the-clock">ON THE CLOCK</div>
+    <div id="clockName">Select a manager below</div>
+    <div id="timerDisplay">600</div>
+    <div class="timer-buttons">
+      <button onclick="startTimer()">Start</button>
+      <button onclick="stopTimer()">Stop</button>
+      <button onclick="resetTimer()">Reset</button>
+    </div>
+  </div>
 
   <div class="dropdown-container">
     <select id="managerDropdown" onchange="updateClockName()">
       <option disabled selected>Select manager</option>
-      <option>Selection in Progress...</option>
       <option>Justin</option>
       <option>Ryan</option>
       <option>Jared</option>
@@ -188,109 +219,116 @@
       <option>Kyle</option>
       <option>Seth</option>
     </select>
-    <button onclick="startTimer()">Start</button>
-    <button onclick="stopTimer()">Stop</button>
-    <button onclick="resetTimer()">Reset</button>
+  </div>
+
+  <div class="board-controls">
     <button onclick="resetBoard()">Reset Board</button>
     <button onclick="removePickPrompt()">Remove Pick</button>
     <button onclick="lockDraft()">Lock Picks</button>
   </div>
 
-  <div class="spots" id="spotsContainer"></div>
-  <div class="draft-order" id="draftOrder"></div>
+  <div class="spots" id="spotsContainer">
+    <div class="spot" onclick="selectSpot(this)">1</div>
+    <div class="spot" onclick="selectSpot(this)">2</div>
+    <div class="spot" onclick="selectSpot(this)">3</div>
+    <div class="spot" onclick="selectSpot(this)">4</div>
+    <div class="spot" onclick="selectSpot(this)">5</div>
+    <div class="spot" onclick="selectSpot(this)">6</div>
+    <div class="spot" onclick="selectSpot(this)">7</div>
+    <div class="spot" onclick="selectSpot(this)">8</div>
+    <div class="spot" onclick="selectSpot(this)">9</div>
+    <div class="spot" onclick="selectSpot(this)">10</div>
+    <div class="spot" onclick="selectSpot(this)">11</div>
+    <div class="spot" onclick="selectSpot(this)">12</div>
+  </div>
+
+  <div class="draft-order" id="draftOrder">
+    <div class="draft-pick" id="pick-1">1. </div>
+    <div class="draft-pick" id="pick-2">2. </div>
+    <div class="draft-pick" id="pick-3">3. </div>
+    <div class="draft-pick" id="pick-4">4. </div>
+    <div class="draft-pick" id="pick-5">5. </div>
+    <div class="draft-pick" id="pick-6">6. </div>
+    <div class="draft-pick" id="pick-7">7. </div>
+    <div class="draft-pick" id="pick-8">8. </div>
+    <div class="draft-pick" id="pick-9">9. </div>
+    <div class="draft-pick" id="pick-10">10. </div>
+    <div class="draft-pick" id="pick-11">11. </div>
+    <div class="draft-pick" id="pick-12">12. </div>
+  </div>
+
   <audio id="buzzer" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
 
   <script>
-    const managerOnClock = document.getElementById('clockName');
-    const spotsContainer = document.getElementById('spotsContainer');
-    const draftOrder = document.getElementById('draftOrder');
+    const clockName = document.getElementById("clockName");
     const timerDisplay = document.getElementById("timerDisplay");
     const buzzer = document.getElementById("buzzer");
-    let timer;
-    let timeLeft = 600;
-
-    for (let i = 1; i <= 12; i++) {
-      const spot = document.createElement('div');
-      spot.classList.add('spot');
-      spot.textContent = i;
-      spot.onclick = () => selectSpot(spot);
-      spotsContainer.appendChild(spot);
-
-      const pick = document.createElement('div');
-      pick.classList.add('draft-pick');
-      pick.id = `pick-${i}`;
-      pick.textContent = `${i}. `;
-      draftOrder.appendChild(pick);
-    }
+    const spots = document.querySelectorAll(".spot");
+    let timer, timeLeft = 600;
 
     function updateClockName() {
-      const dropdown = document.getElementById('managerDropdown');
-      managerOnClock.textContent = dropdown.value;
+      const name = document.getElementById("managerDropdown").value;
+      clockName.textContent = name;
     }
 
     function selectSpot(el) {
-      if (el.classList.contains('taken')) return;
+      if (el.classList.contains("taken")) return;
       const spot = el.textContent;
-      const managerName = managerOnClock.textContent;
-      if (managerName === 'Select a manager below') return;
+      const manager = clockName.textContent;
+      if (manager === "Select a manager below") return;
       const pickEl = document.getElementById(`pick-${spot}`);
-      pickEl.textContent = `${spot}. ${managerName}`;
-      el.classList.add('taken');
-      el.onclick = null;
-    }
-
-    function removePickPrompt() {
-      const pickNum = prompt("Enter the draft spot number to clear (1-12):");
-      const spotNum = parseInt(pickNum);
-      if (!isNaN(spotNum) && spotNum >= 1 && spotNum <= 12) {
-        document.getElementById(`pick-${spotNum}`).textContent = `${spotNum}. `;
-        [...spotsContainer.children].forEach(spot => {
-          if (spot.textContent === String(spotNum)) {
-            spot.classList.remove('taken');
-            spot.onclick = () => selectSpot(spot);
-          }
-        });
-      } else {
-        alert("Invalid input. Please enter a number from 1 to 12.");
-      }
+      pickEl.textContent = `${spot}. ${manager}`;
+      el.classList.add("taken");
+      el.removeAttribute("onclick");
     }
 
     function resetBoard() {
-      [...spotsContainer.children].forEach(spot => {
-        spot.classList.remove('taken');
-        spot.onclick = () => selectSpot(spot);
+      spots.forEach(spot => {
+        spot.classList.remove("taken");
+        spot.setAttribute("onclick", "selectSpot(this)");
       });
       for (let i = 1; i <= 12; i++) {
         document.getElementById(`pick-${i}`).textContent = `${i}. `;
       }
-      managerOnClock.textContent = 'Select a manager below';
-      document.getElementById('managerDropdown').selectedIndex = 0;
+      clockName.textContent = "Select a manager below";
+      document.getElementById("managerDropdown").selectedIndex = 0;
+    }
+
+    function removePickPrompt() {
+      const pickNum = prompt("Enter pick number to remove (1-12):");
+      const num = parseInt(pickNum);
+      if (!isNaN(num) && num >= 1 && num <= 12) {
+        document.getElementById(`pick-${num}`).textContent = `${num}. `;
+        spots.forEach(spot => {
+          if (spot.textContent === String(num)) {
+            spot.classList.remove("taken");
+            spot.setAttribute("onclick", "selectSpot(this)");
+          }
+        });
+      } else {
+        alert("Invalid pick number.");
+      }
     }
 
     function lockDraft() {
       document.querySelectorAll('select, button').forEach(el => el.disabled = true);
-      [...spotsContainer.children].forEach(spot => spot.style.pointerEvents = 'none');
-    }
-
-    function updateTimerDisplay() {
-      const minutes = Math.floor(timeLeft / 60).toString().padStart(2, '0');
-      const seconds = (timeLeft % 60).toString().padStart(2, '0');
-      timerDisplay.textContent = `${minutes}:${seconds}`;
-      if (timeLeft <= 60 && timeLeft > 0) {
-        timerDisplay.style.color = 'red';
-      } else {
-        timerDisplay.style.color = 'white';
-      }
+      spots.forEach(spot => spot.style.pointerEvents = 'none');
     }
 
     function startTimer() {
       clearInterval(timer);
       timer = setInterval(() => {
         timeLeft--;
-        updateTimerDisplay();
-        if (timeLeft <= 0) {
+        timerDisplay.textContent = timeLeft;
+        if (timeLeft <= 10 && timeLeft > 0) {
+          timerDisplay.classList.add("flashing");
+        } else {
+          timerDisplay.classList.remove("flashing");
+        }
+        if (timeLeft === 0) {
           clearInterval(timer);
           buzzer.play();
+          timerDisplay.classList.remove("flashing");
         }
       }, 1000);
     }
@@ -302,10 +340,9 @@
     function resetTimer() {
       clearInterval(timer);
       timeLeft = 600;
-      updateTimerDisplay();
+      timerDisplay.textContent = timeLeft;
+      timerDisplay.classList.remove("flashing");
     }
-
-    updateTimerDisplay();
   </script>
 </body>
 </html>
